<?xml version="1.0" encoding="utf-8"?>

<!--Elysha Spector owns the rights to background image "meow_count_background4"-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/meow_count_background4"
    tools:context="com.example.android.meowcount.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--Layout for both Score Counts-->
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <!--KYO (CAT 1) LAYOUT (left side)-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/catName"
                    android:text="@string/Cat1" />

                <TextView
                    android:id="@+id/kyo_score"
                    style="@style/scores"
                    android:text="@string/initialScore" />

                <Button
                    style="@style/increment1Buttons"
                    android:background="@drawable/selector_plus_one"
                    android:onClick="addMeowForKyo"
                    android:text="@string/Noise2" />

                <Button
                    style="@style/increment3Buttons"
                    android:background="@drawable/selector_plus_three"
                    android:onClick="addPurrForKyo"
                    android:text="@string/Noise3" />

                <Button
                    style="@style/decrementButtons"
                    android:background="@drawable/selector_minus_two"
                    android:onClick="pointsReducedForKyo"
                    android:text="@string/Noise4" />

                <!--KYO (CAT 1) layout end-->
            </LinearLayout>

            <!--Centered Vertical Divider Line-->
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:background="@color/lightPurple" />

            <!--ALICE (CAT 2) LAYOUT (right side)-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/catName"
                    android:text="@string/Cat2" />

                <TextView
                    android:id="@+id/alice_score"
                    style="@style/scores"
                    android:text="@string/initialScore" />

                <Button
                    style="@style/increment1Buttons"
                    android:background="@drawable/selector_plus_one"
                    android:onClick="addSqueekForAlice"
                    android:text="@string/Noise1" />

                <Button
                    style="@style/increment3Buttons"
                    android:background="@drawable/selector_plus_three"
                    android:onClick="addPurrForAlice"
                    android:text="@string/Noise3" />

                <Button
                    style="@style/decrementButtons"
                    android:background="@drawable/selector_minus_two"
                    android:onClick="pointsReducedForAlice"
                    android:text="@string/Noise4" />

                <!--ALICE (CAT 2) layout end-->
            </LinearLayout>

            <!--Score count layout end-->
        </LinearLayout>

        <!--RESET BUTTON-->
        <Button
            style="@style/resetButton"
            android:background="@drawable/selector_reset"
            android:layout_below="@+id/linearLayout"
            android:onClick="resetScore"
            android:text="@string/ResetButton" />

        <!--General layout end-->
    </RelativeLayout>

</ScrollView>